# simple-chess

./: CMakeLists.txt  Test.cpp  Test.h  main.cpp  notes  tmp.txt
sf_13/src/: benchmark.cpp  bitbase.cpp  bitboard.cpp  bitboard.h  endgame.cpp  endgame.h  evaluate.cpp  evaluate.h  main.cpp  material.cpp  material.h  misc.cpp  misc.h  movegen.cpp  movegen.h  movepick.cpp  movepick.h  pawns.cpp  pawns.h  position.cpp  position.h  psqt.cpp  psqt.h  search.cpp  search.h  thread.cpp  thread.h  timeman.cpp  timeman.h  tt.cpp  tt.h  tune.cpp  tune.h  types.h  uci.cpp  uci.h  ucioption.cpp
sf_13/src/nnue/: evaluate_nnue.cpp  evaluate_nnue.h  nnue_accumulator.h  nnue_architecture.h  nnue_common.h  nnue_feature_transformer.h
sf_13/src/nnue/architectures/: halfkp_256x2-32-32.h
sf_13/src/nnue/features/: feature_set.h  features_common.h  half_kp.cpp  half_kp.h  index_list.h
sf_13/src/nnue/layers/: affine_transform.h  clipped_relu.h  input_slice.h
sf_13/src/syzygy/: tbprobe.cpp  tbprobe.h
src/: Board.cpp  Board.h  BoardVector.cpp  BoardVector.h  ChessPiece.cpp  ChessPiece.h  Connector.cpp  Connector.h  Data.h  GameEngine.cpp  GameEngine.h
src/Pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
